--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -122,7 +122,7 @@
 
 <!--FOOTER FRAGMENT-->
 <footer th:fragment="footer">
-    <a class="footer" href="/about">The SimpleSauce Team</a>
+    <a class="footer" href="/about">The LifeMap Team</a>
 </footer>
 
 <!--SCRIPTS FRAGMENT-->
