Commented the lifemap div.

--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -6,7 +6,7 @@
 <div id="content-wrap">
     <!--Temp location for Search Info-->
 
-  <div id="lifemap">LifeMap</div>
+  <!--<div id="lifemap">LifeMap</div>-->
 
   <div id="map-backdrop">
     <img id="map-backdrop-img" th:src="@{/img/006-map.svg}" alt=""/>
