--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -123,7 +123,7 @@ a:visited {
   height: 20em;
   padding: 2.8em;
   border-radius: 50%;
-  margin: 1.75em auto 0;
+  margin: 2.7em auto;
 }
 #icon-container a {
   display: block;
@@ -139,6 +139,11 @@ a:visited {
   border-radius: 50%;
   display: block; width: 100%;
 }
+
+#icon-container img:hover {
+  border: 2px solid #ffffff;
+}
+
 #deg0 { transform: translate(10em); } /* 12em = half the width of the wrapper */
 #deg27692 { transform: rotate(30deg) translate(10em) rotate(-30deg); }
 #deg55384 { transform: rotate(60deg) translate(10em) rotate(-60deg); }
@@ -146,11 +151,11 @@ a:visited {
 #deg11076 { transform: rotate(120deg) translate(10em) rotate(-120deg); }
 #deg13846 { transform: rotate(150deg) translate(10em) rotate(-150deg); }
 #deg16615 { transform: rotate(180deg) translate(10em) rotate(-180deg); }
-#deg19384 { transform: rotate(210deg) translate(10em) rotate(-210deg); border: 1px solid #00b4ff; border-radius: 50%;}
-#deg22153 { transform: rotate(240deg) translate(10em) rotate(-240deg); border: 1px solid #00b4ff; border-radius: 50%; }
-#deg24923 { transform: rotate(270deg) translate(10em) rotate(-270deg); border: 1px solid #00b4ff; border-radius: 50%; }
-#deg276-92 { transform: rotate(300deg) translate(10em) rotate(-300deg); border: 1px solid #00b4ff; border-radius: 50%; }
-#deg30461 { transform: rotate(330deg) translate(10em) rotate(-330deg); border: 1px solid #00b4ff; border-radius: 50%; }
+#deg19384 { transform: rotate(210deg) translate(10em) rotate(-210deg); border: 2px solid #00b4ff; border-radius: 50%;}
+#deg22153 { transform: rotate(240deg) translate(10em) rotate(-240deg); border: 2px solid #00b4ff; border-radius: 50%; }
+#deg24923 { transform: rotate(270deg) translate(10em) rotate(-270deg); border: 2px solid #00b4ff; border-radius: 50%; }
+#deg276-92 { transform: rotate(300deg) translate(10em) rotate(-300deg); border: 2px solid #00b4ff; border-radius: 50%; }
+#deg30461 { transform: rotate(330deg) translate(10em) rotate(-330deg); border: 2px solid #00b4ff; border-radius: 50%; }
 
 .intro-title {
   text-align: center;
@@ -242,9 +247,6 @@ a:visited {
   background-color: #bffff0;
 }
 
-/*TODO Change the position of this element to be always in the top left of .info-card*/
-
-
 .hidden {
   display: none;
 }
@@ -272,7 +274,7 @@ a:visited {
 }
 
 #location-name {
-
+/*TODO Put this inside of the city photo.*/
 }
 
 #location-info {
