--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -1,33 +1,29 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments :: login(Login)"/>
+<link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet"/>
 <body>
+
 <nav th:replace="fragments :: navbar" />
 
-<div class="col-sm-6 col-sm-offset-3 text-center moveFldsDiv">
+<div class="moveFldsDiv container-fluid">
     <h1 id="loginHeader">LifeMap</h1>
-    <img th:src="@{/img/005-gps.svg}" alt="gps"/>
-    <br/>
-
-    <form th:action="@{/login}" th:method="post" class="form-horizontal">
+    <img id="loginImage" th:src="@{/img/005-gps.svg}" alt="gps"/>
+    <form th:action="@{/login}" th:method="post">
 
         <div class="form-group">
-            <label id="usernameLbl" for="username" class="col-sm-2 control-label">Username</label>
-            <div class="col-sm-10">
-                <input id="username" class="col-sm-10" name="username" autofocus="true" type="text"/>
-            </div>
+            <label id="usernameLbl" for="username" class=" control-label">Username</label>
+            <input id="username" class="" name="username" autofocus="true" type="text"/>
         </div>
 
         <div class="form-group">
-            <label id="passwordLbl" for="password" class="col-sm-2 control-label">Password</label>
-            <div class="col-sm-10">
-                <input id="password" class="col-sm-10" name="password" type="password"/>
-            </div>
+            <label id="passwordLbl" for="password" class=" control-label">Password</label>
+            <input id="password" class="" name="password" type="password"/>
         </div>
 
         <br/>
 
-        <input class="align-center btn" type="submit" value="Log In"/>
+        <input class="btn btn-lg btn-primary regBtn" id="btnSubmit" type="submit" value="Log In"/>
         <div id="LoginErrorDiv">
             <div class="error" th:if="${param.error}">
                 Invalid Username and Password.
@@ -35,6 +31,7 @@
         </div>
 
     </form>
+    <br/>
     <footer th:replace="fragments :: footer"/>
 </div>
 <!--<footer th:replace="fragments :: footer"/>-->
