--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -21,6 +21,7 @@
     <div id="icon-container"></div>
 
     <div id="info-card-container">
+      <div id="initial-info-message" class="shown">Information Appears Here!</div>
       <div id="happiness" class="info hidden"></div>
       <div id="apartment" class="info hidden"></div>
       <div id="cost-of-living" class="info hidden"></div>
