--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -75,6 +75,25 @@ a:visited {
     justify-content: center;
 }
 
+#intro-search-container {
+  order: 1;
+  width: 100%;
+  background: url('../img/congruent_pentagon.png');
+}
+
+#intro-div {
+  color: #ffffff;
+}
+
+#intro-div h2 {
+  background: url('../img/dark_mosaic.png');
+}
+
+#intro-div p {
+  margin-left: 10px;
+  background-color: rgba(18, 18, 18, 0.8);
+}
+
 #search-wrapper {
   margin: 0 auto;
   width: 345px;
@@ -117,13 +136,6 @@ a:visited {
 }
 
 #icon-container {
-  font-size: 1em;
-  display: flex;
-  flex-wrap: wrap;
-  width: 100%;
-}
-
-#icon-container {
   background-image: url('../img/002-compass.svg');
   position: relative;
   width: 20em;
@@ -132,6 +144,7 @@ a:visited {
   border-radius: 50%;
   margin: 2.7em auto;
 }
+
 #icon-container a {
   display: block;
   position: absolute;
@@ -266,6 +279,7 @@ a:visited {
 .hidden {
   display: none;
 }
+
 #job-dropdown {
   text-align: center;
   width: 70%;
@@ -397,12 +411,6 @@ footer {
     margin-top: 15px;
 }
 
-@media screen and (min-width: 768px) {
-    .btn-link {
-        margin-top: 11%;
-    }
-}
-
 #burger {
     position: absolute;
     top: -1%;
@@ -460,10 +468,6 @@ footer {
     margin: 1% auto;
 }
 
-@media (min-width: 768px) {
-
-}
-
 .inputLabels {
     font-size: 1.5em;
     margin-left: 25%;
@@ -502,8 +506,82 @@ footer {
 
 /*MEDIA QUERIES*/
 @media (min-width: 768px) {
-  #info-card-container {
-    width: 50%;
-    margin: 1.6em auto;
+
+  #intro-search-container {
+    color: white;
+    background: url('../img/congruent_pentagon.png');
+    display: flex;
+    flex-direction: row;
+    justify-items: center;
+    order: 1;
+    width: 100%;
   }
+
+  #content-wrap {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+
+  #search-wrapper {
+    display: flex;
+    align-items: center;
+    order: 1;
+  }
+
+  #icons-info-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-items: center;
+    order: 2;
+    width: 100%;
+  }
+
+  #icon-container {
+    margin: 5% 10%;
+    background-position: center;
+  }
+
+  #map-backdrop {
+    margin: 0 auto;
+    order: 3;
+  }
+
+  .city-info-wrap {
+    margin: 0 auto;
+    width: 50%;
+    order: 4;
+  }
+
+  footer {
+    width: 100%;
+    order: 999;
+  }
+
+  #info-card-container {
+    color: #EEEEEE;
+    overflow: scroll;
+    z-index: 2;
+    background-image: url('../img/dark_mosaic.png');
+    border: 2px inset cyan;
+    border-radius: 20px;
+    font-size: 1.4em;
+    margin-right: 1.6em;
+    margin-top: 1.6em;
+    margin-bottom: 1.6em;
+    justify-content: center;
+    width: 50%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #image-container {
+    width: 100%
+  }
+
+  .btn-link {
+    margin-top: 11%;
+  }
+
 }
