--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -162,11 +162,12 @@ a:visited {
   text-align: center;
   display: block;
   width: 100%;
+    height: 17%;
   margin-top: 2em;
   padding: 5px;
   background-color: #00b4ff;
   position: relative;
-  top: 0;
+  top: -8.5%;
   transform: translateY(-50%);
 }
 
@@ -190,10 +191,10 @@ a:visited {
 
 .info-card-img {
   width: 2em;
-  height: 2em;
+  height: 1.95em;
   position: relative;
   left: 5px;
-  top: -57px;
+  top: -102px;
 }
 
 .warning-div {
