--- a/src/main/resources/static/css/globalGym.css
+++ b/src/main/resources/static/css/globalGym.css
@@ -1,11 +1,18 @@
 html {
     font-size: 14px;
     max-width: 100vw;
+  background: url('../img/escheresque_ste.png');
 }
 
 html, body {
     height: 100%;
     box-sizing: border-box;
+}
+
+.affix {
+  z-index: 999;
+  position: fixed;
+  top: 0;
 }
 
 *:focus {
@@ -15,7 +22,7 @@ html, body {
 body {
   /*font-size: 1.4em;*/
   background-size: cover;
-  background: url('../img/gplaypattern.png') repeat fixed #99bab8;
+  background: url('../img/escheresque_ste.png') repeat fixed #99bab8;
   outline: none;
   margin: 0;
   font-family: Edelsans, Avenir, sans-serif;
@@ -539,6 +546,7 @@ footer {
     display: flex;
     flex-direction: row;
     align-items: center;
+    /*justify-content: center;*/
     justify-items: center;
     order: 2;
     width: 100%;
@@ -570,8 +578,9 @@ footer {
   }
 
   #backdrop-container {
+    height: 100%;
     width: 100%;
-    background: url('../img/escheresque_ste.png');
+    /*background: url('../img/escheresque_ste.png');*/
   }
 
   #info-card-container {
