--- a/src/main/resources/templates/nav/index.html
+++ b/src/main/resources/templates/nav/index.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head th:replace="fragments :: head('LifeMap')"/>
 <body>
-<nav th:replace="fragments :: navbarSearch"/>
+<!--<nav th:replace="fragments :: navbarSearch"/>-->
 <div id="backdrop-container">
   <div id="content-wrap">
     <div id="map-backdrop">
@@ -12,9 +12,20 @@
 
     <div id="intro-search-container">
       <div id="intro-div">
-        <h2>LifeMap</h2>
+        <a class="navbar-brand" href="/"><h2>LifeMap</h2></a>
         <p>A minimalist, at-a-glance view of life in another city.</p>
+        <ul class="nav navbar-nav">
+          <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
+          <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
+          <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
+          <li sec:authorize="isAuthenticated()">
+            <form th:action="@{/logout}" th:method="post">
+              <button class="btn btn-link" >Logout</button>
+            </form>
+          </li>
+        </ul>
       </div>
+
       <div id="search-wrapper" class="form-group">
         <input type="text" id="city-input" class="form-control" placeholder="Enter Address" />
         <button id="get-info" type="submit" class="btn btn-default go">Go</button>
@@ -42,10 +53,8 @@
     </div>
 
     <div class="city-info-wrap">
-      <div id="image-container"></div>
+      <div id="image-container">City Summary Appears Here!</div>
       <h1 id="location-name"></h1>
-      <div id="test-search" class="navbar-form col-2 col-sm-4 col-md-7 col-lg-7">
-      </div>
       <div id="location-info"></div>
     </div>
 
