--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -8,7 +8,7 @@
 
 <div class="moveFldsDiv container-fluid">
     <div class="img-Container">
-        <img id="loginImage" th:src="@{/img/005-gps.svg}" alt="gps"/>
+        <img id="loginImage" th:src="@{/img/006-map.svg}" alt="gps"/>
         <span id="loginHeader">LifeMap</span>
     </div>
     <form th:action="@{/login}" th:method="post">
