--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -48,8 +48,8 @@
 </div>
 
 <body>
-<!--NAV HOME / JOBS FRAGMENT-->
-<nav th:fragment="navbarSearch" class="navbar navbar-fixed-top navbar-inverse">
+<!--INDEX NAVBAR-->
+<nav th:fragment="navbarSearch" class="navbar navbar-fixed-top navbar-inverse" id="mobile-nav">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header col-1 col-sm-2 col-md-2 col-lg-2">
@@ -81,41 +81,20 @@
 </nav>
 
 <!--NAV BAR FRAGMENT-->
-<nav th:fragment="navbar" class="navbar navbar-fixed-top navbar-inverse">
-    <div class="container-fluid">
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">LifeMap</a>
-        </div>
-        <!-- Collect the nav links, forms, and other content for toggling -->
-        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-            <ul class="nav navbar-nav">
-                <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
-                <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
-                <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
-                <li sec:authorize="isAuthenticated()">
-                    <form th:action="@{/logout}" th:method="post">
-                        <button class="btn btn-link">Logout</button>
-                    </form>
-                </li>
-
-            </ul>
-        </div><!-- /.navbar-collapse -->
-    </div><!-- /.container-fluid -->
-</nav>
-
-<nav th:fragment="side-nav">
-    <div class="btn to-top-btn hidden-xs hidden-sm">
-        <i class="glyphicon glyphicon-arrow-up"></i>
-    </div>
-    <div class="btn to-btm-btn hidden-xs hidden-sm">
-        <i class="glyphicon glyphicon-arrow-down"></i>
+<nav th:fragment="navbar" id="intro-search-container">
+    <div id="intro-div">
+        <a class="navbar-brand" href="/"><h2>LifeMap</h2></a>
+        <p>A minimalist, at-a-glance view of life in another city.</p>
+        <ul class="nav navbar-nav">
+            <li sec:authorize="!isAuthenticated()"><a href="/register">Register <span class="sr-only">(current)</span></a></li>
+            <li sec:authorize="!isAuthenticated()"><a href="/login">Login</a></li>
+            <li sec:authorize="isAuthenticated()"><a href="/profile">Profile <span class="sr-only">(current)</span></a></li>
+            <li sec:authorize="isAuthenticated()">
+                <form th:action="@{/logout}" th:method="post">
+                    <button class="btn btn-link" >Logout</button>
+                </form>
+            </li>
+        </ul>
     </div>
 </nav>
 
