added new image and adjusted css to allow picture to display properly

--- a/src/main/resources/templates/nav/about.html
+++ b/src/main/resources/templates/nav/about.html
@@ -7,7 +7,7 @@
     <div id="pic-container">
         <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
             <p class="pic-name">Everardo Sifuentes</p>
-            <img id="test-rotate" src="/img/EverardoSifuentes.jpeg" />
+            <div class="pic-img" style="background-image: url('/img/everardo-sifuentes.jpg');" ></div>
             <div class="links-row">
                 <a href="https://github.com/syee4sev"  target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
                 <a href="https://www.linkedin.com/in/everardosifuentes/" target="_blank"><img src="/img/Link.png" /></a>
@@ -16,7 +16,7 @@
         </div>
         <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
             <p class="pic-name">James Carrico</p>
-            <img src="/img/JamesCarrico.jpg" />
+            <img class="pic-img" style="background-image: url('/img/JamesCarrico.jpg');" />
             <div class="links-row">
                 <a href="https://github.com/Jerik0" target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
                 <a href="https://www.linkedin.com/in/jamescarrico/" target="_blank"><img src="/img/Link.png" /></a>
@@ -25,7 +25,7 @@
         </div>
         <div class="pic-self col-4 col-sm-4 col-md-4 col-lg-4">
             <p class="pic-name">Jaime Moncada</p>
-            <img src="/img/JaimeMoncada.jpg" />
+            <img class="pic-img" style="background-image: url('/img/JaimeMoncada.jpg');" />
             <div class="links-row">
                 <a href="https://github.com/jmoncad2" target="_blank"><img src="/img/GitHub_Logo_White.png" /></a>
                 <a href="https://www.linkedin.com/in/jaime-moncada/" target="_blank"><img src="/img/Link.png" /></a>
