--- a/src/main/resources/static/css/about.css
+++ b/src/main/resources/static/css/about.css
@@ -19,10 +19,8 @@ html, body {
   margin: 5px;
 }
 
-.pic-self:first-child {
-  background-image: linear-gradient(to top, #515151 86.5%, #00B4FF 13.5%);
-  margin: 5px;
-}
+/*
+*/
 
 .pic-name {
   text-align: center;
@@ -31,11 +29,20 @@ html, body {
   font-size: 2em;
 }
 
-.pic-self img{
+/*.pic-self img{*/
+  /*border: 2px solid #ffffff;*/
+  /*border-radius: 10px;*/
+  /*width: 100%;*/
+  /*height: 80%;*/
+/*}*/
+
+.pic-img{
   border: 2px solid #ffffff;
   border-radius: 10px;
   width: 100%;
-  height: 80%;
+  height: 30vw;
+  background-position: center;
+  background-size: cover;
 }
 
 #test-rotate {
@@ -78,9 +85,16 @@ html, body {
     margin: 2px;
   }
 
-  .pic-self:first-child {
-    background-image: linear-gradient(to top, #515151 86%, #00B4FF 14%);
-    width: 30%;
-    height: 50%;
+  /*.pic-self:first-child {*/
+    /*background-image: linear-gradient(to top, #515151 86%, #00B4FF 14%);*/
+    /*width: 30%;*/
+    /*height: 50%;*/
+  /*}*/
+}
+
+@media (max-width: 768px) {
+  .pic-img{
+    height: 80vw !important;
   }
+
 }
